@@ -4,7 +4,7 @@
 
 	<groupId>net.sansa-stack</groupId>
 	<artifactId>sansa-rdf-parent_2.11</artifactId>
-	<version>0.2.0</version>
+	<version>0.3.0</version>
 	<packaging>pom</packaging>
 
 	<!-- <name>SANSA Stack - RDF Layer</name> -->
@@ -16,15 +16,20 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<encoding>UTF-8</encoding>
 
-		<scala.version>2.11.8</scala.version>
-		<scala.compat.version>2.11</scala.compat.version>
-		<scala.classifier>${scala.compat.version}</scala.classifier>
-		<flink.version>1.3.0</flink.version>
-		<spark.version>2.1.1</spark.version>
-		<jena.version>3.1.1</jena.version>
-		<jsa.subversion>1</jsa.subversion>
+		<scala.version>2.11.11</scala.version>
+		<scala.binary.version>2.11</scala.binary.version>
+		<scala.classifier>${scala.binary.version}</scala.classifier>
+		<scala.version.suffix>_${scala.binary.version}</scala.version.suffix>
+
+		<flink.version>1.4.0</flink.version>
+		<spark.version>2.2.1</spark.version>
+		<jena.version>3.5.0</jena.version>
+		<jsa.subversion>2</jsa.subversion>
 
 		<jsa.version>${jena.version}-${jsa.subversion}</jsa.version>
+
+		<jetty.version>9.4.8.v20171121</jetty.version>
+		<mortbay.jetty.version>6.1.26</mortbay.jetty.version>
 	</properties>
 
 	<scm>
@@ -39,57 +44,120 @@
 		<module>sansa-rdf-partition-parent</module>
 		<module>sansa-rdf-spark-parent</module>
 		<module>sansa-rdf-kryo-parent</module>
-		<module>sansa-rdf-flink</module>
+		<module>sansa-rdf-flink-parent</module>
+		<module>sansa-rdf-common</module>
 	</modules>
+
+
+	<!-- Unsuccessful attempt to force m2e-scala plugin to use the correct scala 
+		library container -->
+	<!-- <dependencies> -->
+	<!-- <dependency> -->
+	<!-- <groupId>org.scala-lang</groupId> -->
+	<!-- <artifactId>scala-library</artifactId> -->
+	<!-- </dependency> -->
+	<!-- <dependency> -->
+	<!-- <groupId>org.scala-lang</groupId> -->
+	<!-- <artifactId>scala-reflect</artifactId> -->
+	<!-- </dependency> -->
+	<!-- </dependencies> -->
 
 	<dependencyManagement>
 		<dependencies>
 
+
+			<dependency>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty</artifactId>
+				<!-- <scope>provided</scope> -->
+				<version>${mortbay.jetty.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-util</artifactId>
+				<!-- <scope>provided</scope> -->
+				<version>${mortbay.jetty.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-util</artifactId>
+				<version>${jetty.version}</version>
+			</dependency>
+
+			<!-- Scala -->
+			<dependency>
+				<groupId>org.scala-lang</groupId>
+				<artifactId>scala-library</artifactId>
+				<version>${scala.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.scala-lang</groupId>
+				<artifactId>scala-reflect</artifactId>
+				<version>${scala.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.scala-lang</groupId>
+				<artifactId>scalap</artifactId>
+				<version>${scala.version}</version>
+			</dependency>
+
+
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>sansa-rdf-test-resources_${scala.compat.version}</artifactId>
+				<artifactId>sansa-rdf-test-resources${scala.version.suffix}</artifactId>
 				<version>${project.version}</version>
 				<!-- <classifier>${scala.classifier}</classifier> -->
 			</dependency>
 
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>sansa-rdf-kryo-jena_${scala.compat.version}</artifactId>
+				<artifactId>sansa-rdf-kryo-jena${scala.version.suffix}</artifactId>
 				<version>${project.version}</version>
 				<!-- <classifier>${scala.classifier}</classifier> -->
 			</dependency>
 
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>sansa-rdf-kryo-sparqlify_${scala.compat.version}</artifactId>
+				<artifactId>sansa-rdf-kryo-sparqlify${scala.version.suffix}</artifactId>
 				<version>${project.version}</version>
 				<!-- <classifier>${scala.classifier}</classifier> -->
 			</dependency>
 
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>sansa-rdf-spark-utils_${scala.compat.version}</artifactId>
+				<artifactId>sansa-rdf-spark-utils${scala.version.suffix}</artifactId>
 				<version>${project.version}</version>
 				<!-- <classifier>${scala.classifier}</classifier> -->
 			</dependency>
 
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>sansa-rdf-spark-core_${scala.compat.version}</artifactId>
+				<artifactId>sansa-rdf-spark-core${scala.version.suffix}</artifactId>
 				<version>${project.version}</version>
 				<!-- <classifier>${scala.classifier}</classifier> -->
 			</dependency>
 
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>sansa-rdf-partition-core_${scala.compat.version}</artifactId>
+				<artifactId>sansa-rdf-partition-core${scala.version.suffix}</artifactId>
 				<version>${project.version}</version>
 				<!-- <classifier>${scala.classifier}</classifier> -->
 			</dependency>
 
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>sansa-rdf-partition-sparqlify_${scala.compat.version}</artifactId>
+				<artifactId>sansa-rdf-partition-sparqlify${scala.version.suffix}</artifactId>
+				<version>${project.version}</version>
+				<!-- <classifier>${scala.classifier}</classifier> -->
+			</dependency>
+
+			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>sansa-rdf-common${scala.version.suffix}</artifactId>
 				<version>${project.version}</version>
 				<!-- <classifier>${scala.classifier}</classifier> -->
 			</dependency>
@@ -97,27 +165,27 @@
 			<!-- Apache Flink -->
 			<dependency>
 				<groupId>org.apache.flink</groupId>
-				<artifactId>flink-scala_${scala.compat.version}</artifactId>
+				<artifactId>flink-scala_${scala.binary.version}</artifactId>
 				<version>${flink.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.flink</groupId>
-				<artifactId>flink-streaming-scala_${scala.compat.version}</artifactId>
+				<artifactId>flink-streaming-scala_${scala.binary.version}</artifactId>
 				<version>${flink.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.flink</groupId>
-				<artifactId>flink-clients_${scala.compat.version}</artifactId>
+				<artifactId>flink-clients_${scala.binary.version}</artifactId>
 				<version>${flink.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.flink</groupId>
-				<artifactId>flink-gelly-scala_${scala.compat.version}</artifactId>
+				<artifactId>flink-gelly-scala_${scala.binary.version}</artifactId>
 				<version>${flink.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.flink</groupId>
-				<artifactId>flink-table_${scala.compat.version}</artifactId>
+				<artifactId>flink-table_${scala.binary.version}</artifactId>
 				<version>${flink.version}</version>
 			</dependency>
 
@@ -125,34 +193,34 @@
 			<!-- Apache Spark -->
 			<dependency>
 				<groupId>org.apache.spark</groupId>
-				<artifactId>spark-streaming_${scala.compat.version}</artifactId>
+				<artifactId>spark-streaming_${scala.binary.version}</artifactId>
 				<version>${spark.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>org.apache.spark</groupId>
-				<artifactId>spark-streaming-kafka-0-10_${scala.compat.version}</artifactId>
+				<artifactId>spark-streaming-kafka-0-10_${scala.binary.version}</artifactId>
 				<version>${spark.version}</version>
-			</dependency>		
-			
+			</dependency>
+
 
 			<dependency>
 				<groupId>org.scalatest</groupId>
-				<artifactId>scalatest_${scala.compat.version}</artifactId>
+				<artifactId>scalatest_${scala.binary.version}</artifactId>
 				<version>3.0.3</version>
 			</dependency>
 
 
 			<!-- <dependency> -->
 			<!-- <groupId>${project.groupId}</groupId> -->
-			<!-- <artifactId>sansa-rdf-common-partition-core_${scala.compat.version}</artifactId> -->
+			<!-- <artifactId>sansa-rdf-common-partition-core_${scala.binary.version}</artifactId> -->
 			<!-- <version>${project.version}</version> -->
 			<!-- </dependency> -->
 
 			<dependency>
 				<groupId>org.aksw.sparqlify</groupId>
 				<artifactId>sparqlify-core</artifactId>
-				<version>0.8.0</version>
+				<version>0.8.3</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.aksw.sparqlify</groupId>
@@ -169,12 +237,20 @@
 				</exclusions>
 			</dependency>
 
+			<!-- <dependency> <groupId>org.aksw.jena-sparql-api</groupId> <artifactId>jena-sparql-api-core</artifactId> 
+				<version>${jsa.version}</version> </dependency> -->
+
 			<!-- Test -->
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>4.11</version>
-				<scope>test</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.specs</groupId>
+				<artifactId>specs</artifactId>
+				<version>1.2.5</version>
 			</dependency>
 
 			<dependency>
@@ -205,15 +281,19 @@
 				</exclusions>
 			</dependency>
 
+			<!-- <dependency> <groupId>org.apache.jena</groupId> <artifactId>jena-sdb</artifactId> 
+				<version>${jena.version}</version> </dependency> -->
+
+
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-compress</artifactId>
-				<version>1.0</version>
+				<version>1.14</version>
 			</dependency>
 
 			<dependency>
 				<groupId>com.typesafe.scala-logging</groupId>
-				<artifactId>scala-logging_${scala.compat.version}</artifactId>
+				<artifactId>scala-logging_${scala.binary.version}</artifactId>
 				<version>3.5.0</version>
 			</dependency>
 
@@ -221,6 +301,13 @@
 				<groupId>de.javakaffee</groupId>
 				<artifactId>kryo-serializers</artifactId>
 				<version>0.41</version>
+			</dependency>
+
+			<!-- Config API -->
+			<dependency>
+				<groupId>com.typesafe</groupId>
+				<artifactId>config</artifactId>
+				<version>1.3.1</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -236,7 +323,8 @@
 				<groupId>net.alchim31.maven</groupId>
 				<artifactId>scala-maven-plugin</artifactId>
 			</plugin>
-
+			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>build-helper-maven-plugin</artifactId> 
+				</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -246,12 +334,21 @@
 				<groupId>com.amashchenko.maven.plugin</groupId>
 				<artifactId>gitflow-maven-plugin</artifactId>
 			</plugin>
-			<!-- <sourceDirectory>src/main/scala</sourceDirectory> -->
-			<!-- <testSourceDirectory>src/test/scala</testSourceDirectory> -->
 		</plugins>
 
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>com.amashchenko.maven.plugin</groupId>
+					<artifactId>gitflow-maven-plugin</artifactId>
+					<version>1.3.1</version>
+					<configuration>
+						<gitFlowConfig>
+							<versionTagPrefix>v</versionTagPrefix>
+						</gitFlowConfig>
+						<pushRemote>false</pushRemote>
+					</configuration>
+				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -263,13 +360,12 @@
 					</configuration>
 				</plugin>
 
+
+				<!-- Scala Maven -->
 				<plugin>
 					<groupId>net.alchim31.maven</groupId>
 					<artifactId>scala-maven-plugin</artifactId>
-					<version>3.2.2</version>
-					<!-- <configuration> -->
-					<!-- <recompileMode>incremental</recompileMode> -->
-					<!-- </configuration> -->
+					<version>3.3.1</version>
 					<executions>
 						<execution>
 							<goals>
@@ -277,18 +373,63 @@
 								<goal>compile</goal>
 								<goal>testCompile</goal>
 							</goals>
+							<configuration>
+								<scalaVersion>${scala.version}</scalaVersion>
+								<recompileMode>incremental</recompileMode>
+								<useZincServer>true</useZincServer>
+								<args>
+									<arg>-unchecked</arg>
+									<arg>-deprecation</arg>
+									<arg>-feature</arg>
+									<arg>-dependencyfile</arg>
+									<arg>${project.build.directory}/.scala_dependencies</arg>
+									<arg>-Xmax-classfile-name</arg>
+									<arg>128</arg>
+								</args>
+								<jvmArgs>
+									<jvmArg>-Xms1024m</jvmArg>
+									<jvmArg>-Xmx1024m</jvmArg>
+									<jvmArg>-XX:PermSize=${PermGen}</jvmArg>
+									<jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
+									<jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
+								</jvmArgs>
+								<!--<javacArgs> -->
+								<!--<javacArg>-source</javacArg> -->
+								<!--<javacArg>${java.version}</javacArg> -->
+								<!--<javacArg>-target</javacArg> -->
+								<!--<javacArg>${java.version}</javacArg> -->
+								<!--<javacArg>-Xlint:all,-serial,-path</javacArg> -->
+								<!--</javacArgs> -->
+
+							</configuration>
 						</execution>
-						<!-- <execution> -->
-						<!-- <goals> -->
-						<!-- <goal>add-source</goal> -->
-						<!-- <configuration> -->
-						<!-- <sourceDir>src/main/scala</sourceDir> -->
-						<!-- <testSourceDir>src/main/test</testSourceDir> -->
-						<!-- </configuration> -->
-						<!-- </goals> -->
-						<!-- </execution> -->
 					</executions>
+					<configuration>
+						<scalaVersion>${scala.version}</scalaVersion>
+						<recompileMode>incremental</recompileMode>
+					</configuration>
 				</plugin>
+
+				<!-- <plugin> -->
+				<!-- <groupId>org.codehaus.mojo</groupId> -->
+				<!-- <artifactId>build-helper-maven-plugin</artifactId> -->
+				<!-- <version>3.0.0</version> -->
+				<!-- <executions> -->
+				<!-- <execution> -->
+				<!-- <id>add-source</id> -->
+				<!-- <phase>generate-sources</phase> -->
+				<!-- <goals> -->
+				<!-- <goal>add-source</goal> -->
+				<!-- </goals> -->
+				<!-- <configuration> -->
+				<!-- <sources> -->
+				<!-- <source>src/main/scala</source> -->
+				<!-- </sources> -->
+				<!-- </configuration> -->
+				<!-- </execution> -->
+				<!-- </executions> -->
+				<!-- </plugin> -->
+
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -303,18 +444,6 @@
 							<include>**/*Test.*</include>
 							<include>**/*Suite.*</include>
 						</includes>
-					</configuration>
-				</plugin>
-
-				<plugin>
-					<groupId>com.amashchenko.maven.plugin</groupId>
-					<artifactId>gitflow-maven-plugin</artifactId>
-					<version>1.3.1</version>
-					<configuration>
-						<gitFlowConfig>
-							<versionTagPrefix>v</versionTagPrefix>
-						</gitFlowConfig>
-						<pushRemote>false</pushRemote>
 					</configuration>
 				</plugin>
 
@@ -357,38 +486,38 @@
 
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
 					only. It has no influence on the Maven build itself. -->
-				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>
-											net.alchim31.maven
-										</groupId>
-										<artifactId>
-											scala-maven-plugin
-										</artifactId>
-										<versionRange>
-											[3.2.0,)
-										</versionRange>
-										<goals>
-											<goal>testCompile</goal>
-											<goal>compile</goal>
-											<goal>add-source</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<ignore></ignore>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
+				<!-- <plugin> -->
+				<!-- <groupId>org.eclipse.m2e</groupId> -->
+				<!-- <artifactId>lifecycle-mapping</artifactId> -->
+				<!-- <version>1.0.0</version> -->
+				<!-- <configuration> -->
+				<!-- <lifecycleMappingMetadata> -->
+				<!-- <pluginExecutions> -->
+				<!-- <pluginExecution> -->
+				<!-- <pluginExecutionFilter> -->
+				<!-- <groupId> -->
+				<!-- net.alchim31.maven -->
+				<!-- </groupId> -->
+				<!-- <artifactId> -->
+				<!-- scala-maven-plugin -->
+				<!-- </artifactId> -->
+				<!-- <versionRange> -->
+				<!-- [3.2.0,) -->
+				<!-- </versionRange> -->
+				<!-- <goals> -->
+				<!-- <goal>testCompile</goal> -->
+				<!-- <goal>compile</goal> -->
+				<!-- <goal>add-source</goal> -->
+				<!-- </goals> -->
+				<!-- </pluginExecutionFilter> -->
+				<!-- <action> -->
+				<!-- <ignore></ignore> -->
+				<!-- </action> -->
+				<!-- </pluginExecution> -->
+				<!-- </pluginExecutions> -->
+				<!-- </lifecycleMappingMetadata> -->
+				<!-- </configuration> -->
+				<!-- </plugin> -->
 
 			</plugins>
 		</pluginManagement>
@@ -466,6 +595,35 @@
 					</plugin>
 				</plugins>
 			</build>
+		</profile>
+		<profile>
+			<id>osx-x86_64-cpu</id>
+			<activation>
+				<os>
+					<family>mac</family>
+					<arch>x86_64</arch>
+				</os>
+			</activation>
+			<properties>
+				<platform>osx-x86_64-cpu</platform>
+			</properties>
+		</profile>
+		<profile>
+			<id>linux-x86_64-cpu</id>
+			<activation>
+				<os>
+					<family>linux</family>
+				</os>
+			</activation>
+			<properties>
+				<platform>linux-x86_64-cpu</platform>
+			</properties>
+		</profile>
+		<profile>
+			<id>linux-x86_64-gpu</id>
+			<properties>
+				<platform>linux-x86_64-gpu</platform>
+			</properties>
 		</profile>
 	</profiles>
 
